AUX_SOURCE_DIRECTORY(. CLIENT_DIR_SRCS)
SET(CLIENT_CLFLAGS pthread ev msgpackc)
SET(INC_DIR /usr/include/)
SET(LINK_DIR /usr/lib64)
INCLUDE_DIRECTORIES(${CLIENT_DIR_SRCS} ${INC_DIR})
LINK_DIRECTORIES(${LINK_DIR})
LINK_LIBRARIES(${CLIENT_CLFLAGS})

ADD_LIBRARY(nmidclient SHARED ${WORKER_DIR_SRCS} ${CLIENT_DIR_SRCS})
SET_TARGET_PROPERTIES (nmidclient PROPERTIES VERSION 1.2 SOVERSION 1)
TARGET_LINK_LIBRARIES(nmidclient ${CLIENT_CLFLAGS})
INSTALL (TARGETS nmidclient LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)