AUX_SOURCE_DIRECTORY(. WORKER_DIR_SRCS)
SET(NMID_CLFLAGS pthread ev msgpackc)
SET(INC_DIR /usr/include/)
SET(LINK_DIR /usr/lib64)
INCLUDE_DIRECTORIES(${WORKER_DIR_SRCS} ${INC_DIR})
LINK_DIRECTORIES(${LINK_DIR})
LINK_LIBRARIES(${NMID_CLFLAGS})

ADD_LIBRARY(nmidworker SHARED ${WORKER_DIR_SRCS} ${CLIENT_DIR_SRCS} array.h array.c)
SET_TARGET_PROPERTIES (nmidworker PROPERTIES VERSION 1.2 SOVERSION 1)
TARGET_LINK_LIBRARIES(nmidworker ${NMID_CLFLAGS})
INSTALL (TARGETS nmidworker LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${HEAD_FILES} DESTINATION include/nmid)